# vuln-hell

./: .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  pyproject.toml  vulnerable.db
.claude/agent-memory/github-actions-pipeline-architect/: MEMORY.md  project_action_sha_pins.md  project_intentional_findings.md  project_pipeline_overview.md  project_secrets_and_vars.md
.claude/agents/: github-actions-pipeline-architect.md
.github/: semgrep.yml  zap-rules.tsv
.github/actions/setup-python-uv/: action.yml
.github/workflows/: ci.yml  dast.yml  security.yml
app/: database.py  main.py  security.py
app/routes/: admin.py  auth.py  products.py  users.py  utils.py
app/templates/: admin.html  base.html  index.html  login.html  products.html  profile.html  register.html
